<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="8">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:id="@+id/image_button_special_therapy"
                    android:layout_gravity="center"
                    android:background="@drawable/therapy"
                    android:contentDescription="@string/title_special_therapy"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_special_therapy"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:id="@+id/image_button_news_and_events"
                    android:layout_gravity="center"
                    android:contentDescription="@string/title_news_and_events"
                    android:background="@drawable/news"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_news_and_events"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:id="@+id/image_button_hostel_facilities"
                    android:layout_gravity="center"
                    android:contentDescription="@string/title_hostel_facilities"
                    android:background="@drawable/hostel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hostel_facilities"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:id="@+id/image_button_gallery"
                    android:contentDescription="@string/title_gallery"
                    android:layout_gravity="center"
                    android:background="@drawable/gallery"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_gallery"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:contentDescription="@string/title_other_activities"
                    android:id="@+id/image_button_activities"
                    android:layout_gravity="center"
                    android:background="@drawable/activity"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_other_activities"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:id="@+id/image_button_trusties"
                    android:layout_gravity="center"
                    android:contentDescription="@string/title_trusties"
                    android:background="@drawable/trusties"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_trusties"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:contentDescription="@string/title_donate_us"
                    android:id="@+id/image_button_donate_us"
                    android:layout_gravity="center"
                    android:background="@drawable/donation"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_donate_us"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:weightSum="8"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:contentDescription="@string/title_contact_us"
                    android:id="@+id/image_button_contact_us"
                    android:layout_gravity="center"
                    android:background="@drawable/contact"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_contact_us"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>